tests/ui/nll/issue-27282-reborrow-ref-mut-in-guard.stderr
error[E0596]: cannot borrow `r` as mutable, as it is immutable for the pattern guard
  --> $DIR/issue-27282-reborrow-ref-mut-in-guard.rs:14:25
   |
LL |         ref mut r if { (|| { let bar = &mut *r; **bar = false; })();
   |                         ^^                  -- mutable borrow occurs due to use of `r` in closure
   |                         |
   |                         cannot borrow as mutable
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error[E0596]: cannot borrow `r` as mutable, as it is immutable for the pattern guard
  --> $DIR/issue-27282-reborrow-ref-mut-in-guard.rs:24:40
   |
LL |         ref mut r if let Some(()) = { (|| { let bar = &mut *r; **bar = false; })();
   |                                        ^^                  -- mutable borrow occurs due to use of `r` in closure
   |                                        |
   |                                        cannot borrow as mutable
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
